--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 sudo: required
 before_install:
     - wget https://github.com/VirusTotal/yara/archive/v3.5.0.tar.gz -O ../yara.tar.gz
-    - tar -xzvf ../yara.tar.gz
+    - tar -xzvf ../yara.tar.gz -C ..
     - cd ../yara-3.5.0
     - ./bootstrap.sh
     - ./configure --enable-cuckoo
